# ai-self-evolving-bot

./: .env.example  .gitignore  CHANGELOG.md  README.md  feature_list.json  main.py  pyproject.toml  test_chat.py
.claude/hooks/: pre-compact.sh  stop.sh  subagent-stop.sh
.claude/memory-bank/: learned-rules.md
codex/: CODEX-GUIDE.md
config/: evo_config.yaml
config/defaults/: interaction_patterns.md
core/: agent_loop.py  architect.py  bootstrap.py  config.py  context.py  council.py  llm_client.py  memory.py  rules.py  telegram.py  workspace.py
core/channels/: __init__.py  base.py  bus.py  cron.py  heartbeat.py  manager.py  telegram.py
docs/: INDEX.md  NEXT-AGENT-BRIEF.md
docs/archive/: insight-agent-evolution-without-humans.md  insight-ai-collaboration-org-efficiency.md  research-anthropic-effective-harnesses.md  research-claude-artifacts-sandbox.md  research-nanobot.md  (+15 more)
scripts/: setup-nanobot.sh
tests/: conftest.py  test_agent_loop.py  test_architect.py  test_architect_council.py  test_base_channel.py  test_bootstrap.py  test_bus.py  test_bus_bridge.py  test_channel_manager.py  test_compaction.py  test_config.py  test_context.py  test_council.py  test_council_review.py  test_cron.py  test_cron_integration.py  test_e2e_channel.py  test_heartbeat.py  test_llm_client.py  test_memory.py  test_metrics.py  test_observer.py  test_reflection.py  test_rollback.py  test_rules.py  test_scheduler_integration.py  test_signals.py  test_telegram.py  test_telegram_channel.py  test_workspace.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  USER.md  evo_config.yaml
(+78 files in other folders)
